Fri Oct 15 07:37:52 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/LRU_Connection_Purging_Strategy.cpp:
        * tao/Strategies/FIFO_Connection_Purging_Strategy.cpp:
        * tao/Strategies/LFU_Connection_Purging_Strategy.cpp:
          Only use the transport pointer when it has a value. Thanks to
          Van Vuong <vanvuong1 at us dot ibm dot com> for providing some stack
          traces where the transport pointer is zero when reaching a purging
          strategy

        * tao/Transport_Cache_Manager_T.cpp:
          Layout changes

Thu Oct 14 17:47:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/driver/drv_preproc.cpp:
          Fixed typo in comment

        * TAO_IDL/include/drv_extern.h:
        * orbsvcs/IFR_Service/drv_private_ifr.h:
          Removed TAO_IDL_COMMAND_LINE_BUFFER_SIZE, not used anymore

        * tao/IORTable/Table_Adapter.h:
          layout changes

Thu Oct 14 13:33:45 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * TAO_IDL/driver/drv_preproc.cpp:
          Cleanup I forgot.

Thu Oct 14 13:21:45 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * TAO_IDL/driver/drv_preproc.cpp:
          Changes to dynamically determin the required size for the
          command line arguments buffer and the number of cmdline args.
          The static max is far too inflexible (and the used constant
          too small) for CCM type projects currently in development.

Wed Oct 13 11:18:45 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * docs/compiler.html:
          Explained the -Gexr option.

Wed Oct 13 06:27:40 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_util.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exs.cpp:
        * TAO_IDL/be/be_visitor_component/facet_exh.cpp:
        * TAO_IDL/be/be_visitor_component/facet_exs.cpp: