@@ -1,3 +1,8 @@
+Fri Oct 15 13:49:28 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * TAO_IDL/be/be_codegen.cpp:
+          Only include ORB_core.h when the reactor method is created.
+
 Fri Oct 15 07:37:52 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/LRU_Connection_Purging_Strategy.cpp:
